Got distracted by design stuff sorry

--- a/Web%20Program/WeddingCollection.xhtml
+++ b/Web%20Program/WeddingCollection.xhtml
@@ -16,7 +16,7 @@
 		
 				<ul>
 					<a href="Shop.xhtml">	
-						<li>Classic Shop</li>
+						<li>Main Shop</li>
 					</a>
 					
 					<a href="New2017Collection.xhtml">
@@ -36,7 +36,11 @@
 					</a>
 				</ul>	
 		</div>
-	
+		
+		<h1 style="text-align:center">Wedding Collection</h1>
+		<img id="home" src="heart.jpg"/>
+		<p> Please contact us on 07123456789 to book an appointment</p>
+		<p> with our expert wedding doughnut planners.</p>
 	</div>
 	
 	
